# analyst-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY_DOCKER.md  DEPLOY_RENDER.md  Dockerfile  LICENSE  PRODUCT_SPEC.md  README.md  SAAS_PLAN.md  TEST_RESULTS.md  docker-compose.yml  install.sh  main.py  pyproject.toml  pytest.ini  render.yaml  start.sh
.claude/skills/implement/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/research/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  evals.yml
agents/: Dockerfile  llm_factory.py  llm_utils.py  main_agent.py  model_registry.py  models.json  planner.py  prompts.py
agents/briefing/: briefing_service.py
agents/graph/: analyst_graph.py  sec_graph.py  sec_workflow.py
agents/market_analysis/: regime_detector.py
agents/prompts/: __init__.py  agent.yaml  briefing.yaml  graph.yaml  loader.py  memory.yaml  planner.yaml  sec_analysis.yaml  tool_capabilities.yaml
agents/sec_agent/: get_SEC_data.py  main_sec_agent.py
agents/sec_workflow/: get_SEC_data.py  main_sec_agent.py  main_sec_workflow.py  sec_llm_models.py
agents/technical_agent/: get_stock_data.py  main_technical_agent.py  process_technical_indicators.py
agents/technical_workflow/: get_stock_data.py  indicator_window.py  main_technical_workflow.py  multi_timeframe.py  pattern_recognition.py  process_technical_indicators.py  support_resistance.py
agents/tools/: briefing_tools.py  market_tools.py  research_tools.py  sec_tool.py  sec_tools.py  stock_tools.py
api/: Dockerfile  clerk_auth.py  db.py  dependencies.py  enrichment.py  llm_concurrency.py  main.py  memory.py  rate_limit.py  validators.py
api/routes/: chart.py  chat.py  company.py  models.py  sessions.py  watchlist.py
cli/: sec_langgraph_cli.py
database/: local_logger.py
docs/: FULLSTACK_DEPLOYMENT_PLAN.md  MCP_INTEGRATION_PLAN.md  QUICKSTART_DEPLOYMENT.md  USER_PROVIDED_KEYS.md  WEEKEND_SPRINT.md  react_agent.mmd
frontend/: Dockerfile  next.config.ts  nginx.conf  package-lock.json  package.json  proxy.ts  railway.toml
frontend-next/: next.config.ts
frontend-next/app/: globals.css  page.tsx
frontend-next/app/about/: page.tsx
frontend-next/hooks/: useModels.ts  useWebSocket.ts
frontend-next/lib/: api.ts  utils.ts
frontend-next/types/: index.ts
frontend/app/: layout.tsx
frontend/app/about/: page.tsx
frontend/components/: UserIdSync.tsx  theme-toggle.tsx
frontend/hooks/: useApiKeys.ts  useUserId.ts  useWebSocket.ts
frontend/lib/: api.ts  auth.tsx  constants.ts  export.ts  utils.ts
frontend/src/: App.svelte  app.css
frontend/types/: index.ts
tests/: conftest.py  test_SEC_agent_retrieval.py  test_advanced_indicators.py  test_analyst_graph.py  test_blocking_loop.py  test_briefing_service.py  test_briefing_tools.py  test_chart_endpoint.py  test_chart_indicators.py  test_chat_ws.py  test_company_caches.py  test_company_db.py  test_company_endpoint.py  test_db.py  test_dependencies.py  test_eightk_routing.py  test_enrichment.py  test_filings_endpoint.py  test_indicator_window.py  test_llm_budget.py  test_llm_concurrency.py  test_llm_factory.py  test_llm_timeout.py  test_llm_utils.py  test_main_startup.py  test_memory.py  test_model_registry.py  test_models_endpoint.py  test_multi_timeframe.py  test_pattern_recognition.py  test_planner_validation.py  test_rate_limit.py  test_research_tools.py  test_sec_identity.py  test_sec_tools_caches.py  test_session_company.py  test_support_resistance.py  test_user_isolation.py  test_watchlist_db.py  test_watchlist_endpoint.py  (+1 more)
tests/datasets/: golden_queries.json  planner_cases.json  router_cases.json
tests/evals/: test_8k_tools_eval.py  test_new_tools_eval.py  test_parallel_execution.py  test_planner.py  test_react_agent.py  test_reconciler.py  test_response_quality.py  test_router.py  test_routing.py  test_sec_data_unit.py  test_sec_tool_returns_unit.py  test_step_executor.py  test_streaming.py  test_synthesizer.py  test_tools.py
tests/security/: test_xss_thinking.py
tests/unit/: test_local_logger.py  test_yahoo_finance_retrieval.py
(+60 files in other folders)
