[project]
name = "analyst-agent"
version = "0.1.0"
description = "Stock analyst agentic AI"
authors = [
    {name = "Jacob Cohen", email = "79770350+jacob187@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "edgartools>=3.14.2",
    "langchain>=0.3.22",
    "langchain-google-genai>=2.1.4",
    "langchain-tavily>=0.1.0",
    "langgraph>=0.6.4",
    "tavily-python>=0.5.0",
    "yfinance>=0.2.55",
    "pydantic>=2.6.0",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
markers = [
    "eval_unit: pure logic tests, no API keys needed",
    "eval_fast: single LLM call each (router/planner/synthesizer)",
    "eval_tools: individual tool validation (requires API keys)",
    "eval_quality: LLM-as-judge scoring (requires API keys)",
    "eval_e2e: full agent invocations (requires API keys)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "langsmith>=0.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "agents"]
