[project]
name = "analyst-agent"
version = "0.1.0"
description = "Stock analyst agentic AI"
authors = [
    {name = "Jacob Cohen", email = "79770350+jacob187@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "edgartools>=5.28.0",
    "langchain==1.2.15",
    "langchain-google-genai==4.2.2",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-tavily==0.2.18",
    "langgraph==1.1.8",
    "tavily-python==0.7.23",
    "yfinance==0.2.66",
    "pydantic==2.13.3",
    "aiosqlite==0.22.1",
    "python-dotenv==1.2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "eval_unit: pure logic tests, no API keys needed",
    "eval_fast: single LLM call each (router/planner/synthesizer)",
    "eval_tools: individual tool validation (requires API keys)",
    "eval_quality: LLM-as-judge scoring (requires API keys)",
    "eval_e2e: full agent invocations (requires API keys)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "langsmith==0.7.37",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "agents"]
